<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 4: Design the create board screen.)-->
<!--START-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="@dimen/create_board_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="@dimen/card_view_layout_content_padding">

                <FrameLayout
                    android:id="@+id/editProfilePicFrameLayout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/contactImageView"
                        android:layout_width="@dimen/board_image_size"
                        android:layout_height="@dimen/board_image_size"
                        android:contentDescription="@string/image_contentDescription"
                        android:src="@drawable/layer_circle_add_user_profile_image" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:layout_gravity="right|bottom"
                        android:src="@drawable/layer_circle_add_image"
                        tools:ignore="RtlHardcoded" />
                </FrameLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/contactName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactName"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/contactNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactNumber"
                        android:maxLength="10"
                        android:inputType="number"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/create_board_til_marginTop">-->

                    <Spinner
                        android:id="@+id/contactRelationSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_board_til_marginTop"
                        android:hint="@string/contact_relation_hint" />
<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otherRelationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/otherRelation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/otherRelation"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_board_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>
    <!--END-->