<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:fillViewport="true"
    android:scrollbars="none">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.FirstActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_text_medium"
        android:text="@string/msg_description_text"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/authentication_description_text_size" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_view_layout_content_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg"
                android:fontFamily="@font/sf_pro_text_medium"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/et_text_size" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"-->
<!--            android:layout_marginTop="@dimen/authentication_screen_til_marginTop"-->
<!--            android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">-->

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:id="@+id/et_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:fontFamily="@font/sf_pro_text_medium"-->
<!--                android:textSize="16sp" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_margin="10dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="OR"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:fontFamily="@font/sf_pro_text_medium"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_height="2dp"
                android:background="@color/blue"/>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/btn"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/layer_circle_image_mic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Hold"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_text_medium"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--                <de.hdodenhof.circleimageview.CircleImageView-->
<!--                    android:layout_width="65dp"-->
<!--                    android:layout_height="65dp"-->
<!--                    android:id="@+id/whatsappIcon"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:focusable="true"-->
<!--                    android:clickable="true"-->
<!--                    android:background="?selectableItemBackgroundBorderless"-->
<!--                    android:src="@drawable/layer_circle_image_mic"/>-->


                <Button
                    android:id="@+id/alertWhatsappBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/sf_pro_text_semibold"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/whatsappAlert"
                    android:paddingHorizontal="40dp"
                    android:layout_margin="20dp"
                    android:drawableStart="@drawable/whatsapp"
                    android:drawablePadding="20dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        <Button
            android:id="@+id/allRecordings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/allRecordings"
            android:paddingHorizontal="40dp"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/recyclerView"-->
<!--            android:layout_margin="20dp"/>-->


<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:lineSpacingExtra="3dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:gravity="center"-->
<!--        android:text="In Case of Emergency\nPress Volume Down button two times OR \nHold This Button"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/grey_txt"-->
<!--        android:fontFamily="@font/sf_pro_text_medium"/>-->



<!--    <Button-->
<!--        android:id="@+id/btn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:backgroundTint="@color/blue"-->
<!--        android:text="Button" />-->


</LinearLayout>
</ScrollView>